--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Setting/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Setting/Index.cshtml
@@ -51,7 +51,7 @@
                                     </div>
 
                                     <div class="clearfix pull-right">
-                                        <button type="button" class="btn btn-inverse waves-effect waves-light" click="saveSetting">
+                                        <button type="button" class="btn btn-inverse waves-effect waves-light" v-on:click="saveSetting">
                                             保存设置
                                         </button>
                                     </div>
@@ -76,12 +76,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">清理缓存</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="cacheKey" placeholder="请输入缓存前缀，输入*删除所有缓存" />
-                                        </div>
-                                    </div>
 
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">黑名单IP列表</label>
@@ -90,12 +84,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">卸载插件</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pluginName" placeholder="请输入插件名，输入*卸载所有插件" />
-                                        </div>
-                                    </div>
 
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">允许重新安装</label>
@@ -124,7 +112,7 @@
                                     <input type="hidden" name="allowCloudCDN" v-model="allowCloudCDN" />
 
                                     <div class="clearfix pull-right">
-                                        <button type="button" class="btn btn-inverse waves-effect waves-light" click="saveAdvanced">
+                                        <button type="button" class="btn btn-inverse waves-effect waves-light" v-on:click="saveAdvanced">
                                             保存设置
                                         </button>
                                     </div>
@@ -251,7 +239,6 @@
             vm.isLoading = false;
             vueLoding.hide();
         });
-
 
     </script>
 }
