update string kit

--- a/src/iBlogs.Site.Web/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Article/Index.cshtml
@@ -29,7 +29,7 @@
             <span class="bottom-bar-item">Share : </span>
             <span class="bottom-bar-item bottom-bar-facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=@ViewService.permalink()" target="_blank" title="@ViewService.Title()" rel="nofollow">facebook</a></span>
             <span class="bottom-bar-item bottom-bar-twitter"><a href="https://twitter.com/intent/tweet?url=@ViewService.permalink()&text=@ViewService.Title()" target="_blank" title="@ViewService.Title()" rel="nofollow">Twitter</a></span>
-            <span class="bottom-bar-item bottom-bar-weibo"><a href="http://service.weibo.com/share/share.php?url=@ViewService.permalink()&amp;title=@ViewService.Title()" target="_blank" title="@ViewService.Title()" rel="nofollow">Weibo</a></span>
+            <span class="bottom-bar-item bottom-bar-weibo"><a href="http://service.weibo.com/share/share.php?url=@ViewService.permalink()&amp;ti=@ViewService.Title()" target="_blank" title="@ViewService.Title()" rel="nofollow">Weibo</a></span>
             <span class="bottom-bar-item bottom-bar-qrcode"><a href="https://cli.im/api/qrSetCode/SetCode?text=@ViewService.permalink()&mhid=50eWDQu6nc0hMHcrKtNXPKo" target="_blank" rel="nofollow">QRSetCode</a></span>
         </div>
         <div class="bottom-bar-items right">
