--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -109,11 +109,11 @@
                             <img src="/templates/themes/default/static/img/logo.png" alt="@ViewService.site_title()">
                         </a>
                         <div class="info-text">
-                            <p>Always coding,Always writing</p>
+                            <p>Always coding,Always writing!</p>
                             <p>
-                                Powered by <a href="https://github.com/otale/liuzhenyulive/iblogs" target="_blank" rel="nofollow">iBlogs</a>
+                                Powered by <a href="https://github.com/liuzhenyulive/iblogs" target="_blank">iBlogs</a>
                             </p>
-                            <p>&copy; @DateTime.Now.Year <a href="https://github.com/liuzhenyulive">Liu, zhenyu</a></p>
+                            <p>&copy; @DateTime.Now.Year <a href="https://github.com/liuzhenyulive" target="_blank">Liu, zhenyu</a></p>
                         </div>
                     </div>
                 </div>
