--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -109,8 +109,8 @@
                                 <i class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span>
                             </a>
                         </li>
-                        <li @(ViewService.active == "publish" ? "active" : "")>
-                            <a href="/admin/article/new" class="waves-effect  @(ViewService.active=="publish"?"active":"")">
+                        <li @(ViewService.active == "Publish" ? "active" : "")>
+                            <a href="/admin/article/new" class="waves-effect  @(ViewService.active=="Publish"?"active":"")">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i><span> 发布文章 </span>
                             </a>
                         </li>
