--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -68,7 +68,7 @@
                                             </a>
                                             <a v-show="item.status == 'Publish'"
                                                class="btn btn-warning btn-sm waves-effect waves-light m-b-5"
-                                               :href="'${site_url()}' + item.url"
+                                               :href="'${SiteUrl()}' + item.url"
                                                target="_blank">
                                                 <i class="fa fa-rocket"></i> <span>预览</span>
                                             </a>
