--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Pages/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Pages/Index.cshtml
@@ -39,7 +39,7 @@
                                         <a v-on:click="DeleteArticle(item.id)" href="javascript:void(0)" class="btn btn-danger btn-sm waves-effect waves-light m-b-5">
                                             <i class="fa fa-trash-o"></i> <span>删除</span>
                                         </a>
-                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" :href="'${site_url()}/' + item.slug"
+                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" :href="'${SiteUrl()}/' + item.slug"
                                            target="_blank">
                                             <i class="fa fa-rocket"></i> <span>预览</span>
                                         </a>
