--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
@@ -86,8 +86,8 @@
 </div>
 @section scripts
 {
-    <script src="@ViewService.cdnURL()/plugins/jquery-validate/1.15.1/jquery.validate.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/jquery-validate/1.15.1/localization/messages_zh.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/jquery-validate/1.15.1/jquery.validate.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/jquery-validate/1.15.1/localization/messages_zh.min.js"></script>
     <script>
         var tale = new $.tale();
         /**
