--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -10,13 +10,13 @@
     <meta content="${_csrf_token}" name="csrf_token" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="/static/admin/images/favicon.png" />
-    @if (ViewService.allow_cloud_CDN() == "true")
+    @if (ViewService.AllowCloudCdn() == "true")
     {
         <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css" rel="stylesheet">
-        <link href="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.css" rel="stylesheet">
-        <link href="@ViewService.cdnURL()/css/style.min.css" rel="stylesheet" asp-append-version="true">
+        <link href="@ViewService.CdnURL()/plugins/vue-loading/vue-loading.min.css" rel="stylesheet">
+        <link href="@ViewService.CdnURL()/css/style.min.css" rel="stylesheet" asp-append-version="true">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -26,32 +26,32 @@
     }
     else
     {
-        <link href="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="@ViewService.cdnURL()/plugins/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.css" rel="stylesheet">
-        <link href="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.css" rel="stylesheet">
-        <link href="@ViewService.cdnURL()/css/style.min.css" rel="stylesheet" asp-append-version="true">
+        <link href="@ViewService.CdnURL()/plugins/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="@ViewService.CdnURL()/plugins/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="@ViewService.CdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.css" rel="stylesheet">
+        <link href="@ViewService.CdnURL()/plugins/vue-loading/vue-loading.min.css" rel="stylesheet">
+        <link href="@ViewService.CdnURL()/css/style.min.css" rel="stylesheet" asp-append-version="true">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-            <script src="@ViewService.cdnURL()/plugins/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="@ViewService.cdnURL()/plugins/respond.js/1.3.0/respond.min.js"></script>
+            <script src="@ViewService.CdnURL()/plugins/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="@ViewService.CdnURL()/plugins/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     }
-    <script src="@ViewService.cdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/md5/md5.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/detect.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/fastclick.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/wow.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/axios/axios.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue/vue.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/moment/moment.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
-    <script src="@ViewService.cdnURL()/js/base.js" asp-append-version="true"></script>
+    <script src="@ViewService.CdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/md5/md5.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/dashborad/detect.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/dashborad/fastclick.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/dashborad/wow.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/axios/axios.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/vue/vue.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/moment/moment.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
+    <script src="@ViewService.CdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
+    <script src="@ViewService.CdnURL()/js/base.js" asp-append-version="true"></script>
 </head>
 <body class="fixed-left">
     <div id="wrapper">
@@ -82,11 +82,11 @@
                             <li class="dropdown">
                                 <a href="index.html" class="dropdown-toggle profile" data-toggle="dropdown"
                                    aria-expanded="true">
-                                    <img src="@ViewService.gravatar(ViewService.User.Email)" alt="user-img" class="img-circle">
+                                    <img src="@ViewService.Gravatar(ViewService.User.Email)" alt="user-img" class="img-circle">
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="@ViewService.site_url()" target="_blank">
+                                        <a href="@ViewService.SiteUrl()" target="_blank">
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                             预览站点
                                         </a>
