Remvoe some method from ViewService and fix some issue

--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Comments/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Comments/Index.cshtml
@@ -49,7 +49,7 @@
                                 <td>
                                     <button v-if="item.authorId != ${login_user.uid}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5" click="reply(item.coid)"><i class="fa fa-reply"></i> 回复</button>
                                     <button v-if="item.status == 'no_audit' && item.authorId != ${login_user.uid}" class="btn btn-success btn-sm waves-effect waves-light m-b-5" click="audit(item.coid, 'approved')">
-                                        <i class="fa fa-check-circle"></i> 通过</span>
+                                        <span><i class="fa fa-check-circle"></i> 通过</span>
                                     </button>
                                     <button class="btn btn-danger btn-sm waves-effect waves-light m-b-5" click="DeleteCommentDto(item.coid)"><i class="fa fa-trash-o"></i> 删除</button>
                                 </td>
@@ -67,7 +67,7 @@
 
                     <li class="page-item" v-for="num in commentPage.navPageNums" :class="{ active: commentPage.pageNum == num }">
                         <a click="load(num)">
-                            {{ num }}</i>
+                            {{ num }}
                         </a>
                     </li>
                     <li v-if="commentPage.hasNextPage">
