--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>@(ViewService.Title() ?? "博客后台") - iBlogs</title>
+    <title>@(ViewData["title"] ?? "博客后台") - iBlogs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content="biezhi" name="author" />
     <meta content="${_csrf_token}" name="csrf_token" />
@@ -104,69 +104,69 @@
             <div class="sidebar-inner slimscrollleft">
                 <div id="sidebar-menu">
                     <ul>
-                        <li class=@(ViewService.active=="home"?"active":"")>
-                            <a href="/admin/home" class="waves-effect @(ViewService.active=="home"?"active":"")">
+                        <li class=@((string) ViewData["title"]=="home"?"active":"")>
+                            <a href="/admin/home" class="waves-effect @((string) ViewData["title"]=="home"?"active":"")">
                                 <i class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span>
                             </a>
                         </li>
-                        <li @(ViewService.active == "Publish" ? "active" : "")>
-                            <a href="/admin/article/new" class="waves-effect  @(ViewService.active=="Publish"?"active":"")">
+                        <li @((string) ViewData["title"] == "Publish" ? "active" : "")>
+                            <a href="/admin/article/new" class="waves-effect  @((string) ViewData["title"]=="Publish"?"active":"")">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i><span> 发布文章 </span>
                             </a>
                         </li>
-                        <li @(ViewService.active == "articles" ? "active" : "")>
-                            <a href="/admin/article" class="waves-effect  @(ViewService.active=="articles"?"active":"")">
+                        <li @((string) ViewData["title"] == "articles" ? "active" : "")>
+                            <a href="/admin/article" class="waves-effect  @((string) ViewData["title"]=="articles"?"active":"")">
                                 <i class="fa fa-list" aria-hidden="true"></i><span> 文章管理 </span>
                             </a>
                         </li>
 
-                        <li @(ViewService.active == "pages" ? "active" : "")>
-                            <a href="/admin/pages" class="waves-effect @(ViewService.active=="pages"?"active":"")">
+                        <li @((string) ViewData["title"] == "pages" ? "active" : "")>
+                            <a href="/admin/pages" class="waves-effect @((string) ViewData["title"]=="pages"?"active":"")">
                                 <i class="fa fa-file-text" aria-hidden="true"></i><span> 页面管理 </span>
                             </a>
                         </li>
 
-                        <li @(ViewService.active == "attaches" ? "active" : "")>
-                            <a href="/admin/attaches" class="waves-effect @(ViewService.active=="attaches"?"active":"")">
+                        <li @((string) ViewData["title"] == "attaches" ? "active" : "")>
+                            <a href="/admin/attaches" class="waves-effect @((string) ViewData["title"]=="attaches"?"active":"")">
                                 <i class="fa fa-cloud-upload" aria-hidden="true"></i><span> 文件管理 </span>
                             </a>
                         </li>
                         
-                        <li @(ViewService.active == "categories" ? "active" : "")>
-                            <a href="/admin/categories" class="waves-effect @(ViewService.active=="categories"?"active":"")">
+                        <li @((string) ViewData["title"] == "categories" ? "active" : "")>
+                            <a href="/admin/categories" class="waves-effect @((string) ViewData["title"]=="categories"?"active":"")">
                                 <i class="fa fa-tags"
                                    aria-hidden="true"></i><span> 分类/标签 </span>
                             </a>
                         </li>
                         
-                        <li @(ViewService.active == "comments" ? "active" : "")>
-                            <a href="/admin/comments" class="waves-effect @(ViewService.active=="comments"?"active":"")">
+                        <li @((string) ViewData["title"] == "comments" ? "active" : "")>
+                            <a href="/admin/comments" class="waves-effect @((string) ViewData["title"]=="comments"?"active":"")">
                                 <i class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span>
                             </a>
                         </li>
 
                         <li class="has_sub">
-                            <a href="javascript:void(0)" class="waves-effect @(ViewService.has_sub=="other"?"active subdrop":"")">
+                            <a href="javascript:void(0)" class="waves-effect">
                                 <i class="fa fa-cubes"></i><span> 外观设置 </span><span class="pull-right">
                                     <i class="fa fa-plus"></i>
                                 </span>
                             </a>
                             <ul class="list-unstyled">
-                                <li @(ViewService.active == "themes" ? "active" : "")>
-                                    <a href="/admin/themes" class="waves-effect @(ViewService.active=="themes"?"active":"")">
+                                <li @((string) ViewData["title"] == "themes" ? "active" : "")>
+                                    <a href="/admin/themes" class="waves-effect @((string) ViewData["title"]=="themes"?"active":"")">
                                         <i class="fa fa-diamond" aria-hidden="true"></i><span> 主题设置 </span>
                                     </a>
                                 </li>
 
-                                <li @(ViewService.active == "template" ? "active" : "")>
-                                    <a href="/admin/template" class="waves-effect @(ViewService.active=="template"?"active":"")">
+                                <li @((string) ViewData["title"] == "template" ? "active" : "")>
+                                    <a href="/admin/template" class="waves-effect @((string) ViewData["title"]=="template"?"active":"")">
                                         <i class="fa fa-hashtag"></i><span> 编辑模板 </span>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li @(ViewService.active == "setting" ? "active" : "")>
-                            <a href="/admin/setting" class="waves-effect @(ViewService.active=="setting"?"active":"")">
+                        <li @((string) ViewData["title"] == "setting" ? "active" : "")>
+                            <a href="/admin/setting" class="waves-effect @((string) ViewData["title"]=="setting"?"active":"")">
                                 <i class="fa fa-gear" aria-hidden="true"></i><span> 系统设置 </span>
                             </a>
                         </li>
