--- a/src/iBlogs.Site.Web/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Article/Index.cshtml
@@ -1,25 +1,26 @@
 ﻿@inject IViewService ViewService
 @using iBlogs.Site.Core.Common.Extensions
 @using iBlogs.Site.Core.Common.Service
-@model ViewBaseModel
+@using iBlogs.Site.Core.Option
+@model ArticleViewModel
 <article class="main-content page-page" itemscope itemtype="http://schema.org/Article">
     <div class="post-header">
         <h1 class="post-title" itemprop="name headline">
-            <a href="@ViewService.permalink()">@ViewService.Title()</a>
+            <a href="@Model.Content.Permalink()">@Model.Content.Title</a>
         </h1>
         <div class="post-data">
-            <time datetime="@ViewService.created("yyyy-MM-dd")" itemprop="datePublished">发布于 @ViewService.created("yyyy-MM-dd")</time>
-            / @Html.Raw(ViewService.show_categories()) / <a href="#comments">@ViewService.comments_num("没有评论", "{0} 条评论")</a> /
-            @ViewService.hits()浏览
+            <time datetime="@Model.Content.CreatedStr("yyyy-MM-dd")" itemprop="datePublished">发布于 @Model.Content.CreatedStr("yyyy-MM-dd")</time>
+            / @Html.Raw(Model.Content.ShowCategories()) / <a href="#comments">@Model.Content.CommentsNumStr("没有评论", "{0} 条评论")</a> /
+            @Model.Content.Hits 浏览
         </div>
     </div>
     <div id="post-content" class="post-content" itemprop="articleBody">
-        <p class="post-tags">@ViewService.show_tags()</p>
-        @Html.Raw(ViewService.show_content())
+        <p class="post-tags">@Model.Content.ShowTags()</p>
+        @Html.Raw(Model.Content.ShowContent())
         <p class="post-info">
-            本文由 <a href="">@(ViewService.theme_option("author", "阿宇"))</a> 创作，采用 <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
-                                                                                    rel="external nofollow">知识共享署名4.0</a> 国际许可协议进行许可<br>本站文章除注明转载/出处外，均为本站原创或翻译，转载前请务必署名<br>最后编辑时间为:
-            @ViewService.modified("yyyy/MM/dd HH:mm")
+            本文由 <a href="">@(ViewService.SiteOption(OptionKeys.Author, "阿宇"))</a> 创作，采用 <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
+                                                                                           rel="external nofollow">知识共享署名4.0</a> 国际许可协议进行许可<br>本站文章除注明转载/出处外，均为本站原创或翻译，转载前请务必署名<br>最后编辑时间为:
+            @Model.Content.ModifiedStr("yyyy/MM/dd HH:mm")
         </p>
     </div>
 </article>
@@ -27,14 +28,14 @@
     <div class="bottom-bar-inner">
         <div class="bottom-bar-items social-share left">
             <span class="bottom-bar-item">Share : </span>
-            <span class="bottom-bar-item bottom-bar-facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=@ViewService.permalink()" target="_blank" title="@ViewService.Title()" rel="nofollow">facebook</a></span>
-            <span class="bottom-bar-item bottom-bar-twitter"><a href="https://twitter.com/intent/tweet?url=@ViewService.permalink()&text=@ViewService.Title()" target="_blank" title="@ViewService.Title()" rel="nofollow">Twitter</a></span>
-            <span class="bottom-bar-item bottom-bar-weibo"><a href="http://service.weibo.com/share/share.php?url=@ViewService.permalink()&amp;title=@ViewService.Title()" target="_blank" title="@ViewService.Title()" rel="nofollow">Weibo</a></span>
-            <span class="bottom-bar-item bottom-bar-qrcode"><a href="https://cli.im/api/qrSetCode/SetCode?text=@ViewService.permalink()&mhid=50eWDQu6nc0hMHcrKtNXPKo" target="_blank" rel="nofollow">QRSetCode</a></span>
+            <span class="bottom-bar-item bottom-bar-facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=@Model.Content.Permalink()" target="_blank" title="@Model.Content.Title" rel="nofollow">facebook</a></span>
+            <span class="bottom-bar-item bottom-bar-twitter"><a href="https://twitter.com/intent/tweet?url=@Model.Content.Permalink()&text=@Model.Content.Title" target="_blank" title="@Model.Content.Title" rel="nofollow">Twitter</a></span>
+            <span class="bottom-bar-item bottom-bar-weibo"><a href="http://service.weibo.com/share/share.php?url=@Model.Content.Permalink()&amp;title=@Model.Content.Title" target="_blank" title="@Model.Content.Title" rel="nofollow">Weibo</a></span>
+            <span class="bottom-bar-item bottom-bar-qrcode"><a href="https://cli.im/api/qrSetCode/SetCode?text=@Model.Content.Permalink()&mhid=50eWDQu6nc0hMHcrKtNXPKo" target="_blank" rel="nofollow">QRSetCode</a></span>
         </div>
         <div class="bottom-bar-items right">
-            <span class="bottom-bar-item">@ViewService.thePrev("→")</span>
-            <span class="bottom-bar-item">@ViewService.thePrev("←")</span>
+            <span class="bottom-bar-item">@Model.ThePrev("→")</span>
+            <span class="bottom-bar-item">@Model.ThePrev("←")</span>
             <span class="bottom-bar-item"><a href="#footer">↓</a></span>
             <span class="bottom-bar-item"><a href="#">↑</a></span>
         </div>
@@ -42,8 +43,8 @@
 </div>
 
 @{
-    var article = ViewService.current_article();
-    var comments = ViewService.comments(6);
+    var article = Model.Content;
+    var comments = Model.Comments;
     <div id="@article.Id" class="comment-container">
         <div id="comments" class="clearfix">
             @if (article.AllowComment)
@@ -92,21 +93,21 @@
                                     </div>
                                     <div class="comment-content">
                                         <span class="comment-author-at"></span>
-                                        <p>@ViewService.article(comment.Content)</p>
+                                        <p>@comment.Content</p>
                                     </div>
                                     <div class="comment-meta">
-                                        <time class="comment-time">@ViewService.FmtDate(comment.Created.ToUnixTimestamp())</time>
+                                        <time class="comment-time">@comment.Created.ToString("yyyy-MM-dd")ViewService.FmtDate()</time>
                                         <span class="comment-reply">
                                             <a rel="nofollow" onclick="TaleComment.reply('@comment.Id');">回复</a>
                                         </span>
                                     </div>
                                 </div>
                             </div>
-                            @if (comment.levels > 0)
+                            @if (comment.Levels > 0)
                             {
                                 <div class="comment-children">
                                     <ol class="comment-list">
-                                        @foreach (var child in comment.children)
+                                        @foreach (var child in comment.Children)
                                         {
                                             <li id="li-comment-@child.Id"
                                                 class="comment-body comment-child comment-level-odd comment-odd">
@@ -120,12 +121,12 @@
                                                         </div>
                                                         <div class="comment-content">
                                                             <span class="comment-author-at">
-                                                                @ViewService.comment_at(child.Parent)
+                                                                @child.CommentAt(comment)
                                                             </span>
-                                                            <p>@ViewService.article(child.Content)</p>
+                                                            <p>@child.Content</p>
                                                         </div>
                                                         <div class="comment-meta">
-                                                            <time class="comment-time">@ViewService.FmtDate(child.Created.ToUnixTimestamp())</time>
+                                                            <time class="comment-time">@child.Created.ToString("yyyy-MM-dd")</time>
                                                             <span class="comment-reply">
                                                                 <a rel="nofollow" onclick="TaleComment.reply('@child.Id');">回复</a>
                                                             </span>
@@ -152,7 +153,7 @@
 
                     @foreach (var navIndex in comments.NavPageNums)
                     {
-                        <li class="@((comments.PageNum==Model.navIndex)?"current":"")"><a href="?cp=@navIndex#comments">@navIndex</a></li>
+                        <li class="@((comments.PageNum==navIndex)?"current":"")"><a href="?cp=@navIndex#comments">@navIndex</a></li>
                     }
 
 
@@ -225,4 +226,111 @@
         document.getElementById('url').value = getCommentCookie('tale_remember_url');
     }
     addCommentInputValue();
+</script>
+
+<div id="directory-content" class="directory-content">
+    <div id="directory"></div>
+</div>
+<script>
+    $('#directory').html('');
+    var postDirectoryBuild = function () {
+        var postChildren = function children(childNodes, reg) {
+            var result = [],
+                isReg = typeof reg === 'object',
+                isStr = typeof reg === 'string',
+                node, i, len;
+            for (i = 0, len = childNodes.length; i < len; i++) {
+                node = childNodes[i];
+                if ((node.nodeType === 1 || node.nodeType === 9) &&
+                    (!reg ||
+                        isReg && reg.test(node.tagName.toLowerCase()) ||
+                        isStr && node.tagName.toLowerCase() === reg)) {
+                    result.push(node);
+                }
+            }
+            return result;
+        },
+            createPostDirectory = function (article, directory, isDirNum) {
+                var contentArr = [],
+                    titleId = [],
+                    levelArr, root, level,
+                    currentList, list, li, link, i, len;
+                levelArr = (function (article, contentArr, titleId) {
+                    var titleElem = postChildren(article.childNodes, /^h\d$/),
+                        levelArr = [],
+                        lastNum = 1,
+                        lastRevNum = 1,
+                        count = 0,
+                        guid = 1,
+                        id = 'directory' + (Math.random() + '').replace(/\D/, ''),
+                        lastRevNum, num, elem;
+                    while (titleElem.length) {
+                        elem = titleElem.shift();
+                        contentArr.push(elem.innerHTML);
+                        num = +elem.tagName.match(/\d/)[0];
+                        if (num > lastNum) {
+                            levelArr.push(1);
+                            lastRevNum += 1;
+                        } else if (num === lastRevNum ||
+                            num > lastRevNum && num <= lastNum) {
+                            levelArr.push(0);
+                            lastRevNum = lastRevNum;
+                        } else if (num < lastRevNum) {
+                            levelArr.push(num - lastRevNum);
+                            lastRevNum = num;
+                        }
+                        count += levelArr[levelArr.length - 1];
+                        lastNum = num;
+                        elem.id = elem.id || (id + guid++);
+                        titleId.push(elem.id);
+                    }
+                    if (count !== 0 && levelArr[0] === 1) levelArr[0] = 0;
+
+                    return levelArr;
+                })(article, contentArr, titleId);
+                currentList = root = document.createElement('ul');
+                dirNum = [0];
+                for (i = 0, len = levelArr.length; i < len; i++) {
+                    level = levelArr[i];
+                    if (level === 1) {
+                        list = document.createElement('ul');
+                        if (!currentList.lastElementChild) {
+                            currentList.appendChild(document.createElement('li'));
+                        }
+                        currentList.lastElementChild.appendChild(list);
+                        currentList = list;
+                        dirNum.push(0);
+                    } else if (level < 0) {
+                        level *= 2;
+                        while (level++) {
+                            if (level % 2) dirNum.pop();
+                            currentList = currentList.parentNode;
+                        }
+                    }
+                    dirNum[dirNum.length - 1]++;
+                    li = document.createElement('li');
+                    link = document.createElement('a');
+                    link.href = '#' + titleId[i];
+                    link.innerHTML = !isDirNum ? contentArr[i] :
+                        dirNum.join('.') + ' ' + contentArr[i];
+                    li.appendChild(link);
+                    currentList.appendChild(li);
+                }
+                directory.appendChild(root);
+            };
+        createPostDirectory(document.getElementById('post-content'), document.getElementById('directory'), true);
+    };
+    postDirectoryBuild();
+</script>
+
+<script>
+    var postDirectory = new Headroom(document.getElementById("directory-content"), {
+        tolerance: 0,
+        offset: 100,
+        classes: {
+            initial: "initial",
+            pinned: "pinned",
+            unpinned: "unpinned"
+        }
+    });
 </script>
